--- a/examples/hello/Dockerfile
+++ b/examples/hello/Dockerfile
@@ -1,10 +1,3 @@
-FROM python:3.7.2-slim
+FROM  jessie-slim 
 
-COPY . /app
-WORKDIR /app
-
-RUN pip install --upgrade pip
-RUN pip install flask
-
-
-ENTRYPOINT ["python", "app.py"]
+ENTRYPOINT ["echo", "hello world"]
